Estilo para los productos de la tienda

--- a/src/app/components/product.component.html
+++ b/src/app/components/product.component.html
@@ -1,7 +1,11 @@
 <!-- el product lo llamo del product.component.ts -->
-<h3>{{ product.title }}</h3>
-<img [src]="product.image" alt="">
-<strong>{{ product.price }}</strong>
+ <div class="product">
+ 
+    <img [src]="product.image"alt="" />
+    <h2>{{ product.title }}</h2>
+    <strong>{{ product.price }}</strong>
+      
+</div>
 
 
 <!--  vamos a agracar un boton de output para añadirlos a la cesta
