--- a/src/app/components/product.component.scss
+++ b/src/app/components/product.component.scss
@@ -1,10 +1,41 @@
 //solo va a afectar a lo que este deltro de ese componente
-:host{ //referencia por defecto a nuestro contenedor <app-product>
-    border: 1px solid black; //borde de cada contenedor
-    margin: 2px;
+:host {
+    display: block;
+    margin: 5px ;
+    border: 1px solid black;
     border-radius: 5px;
-    display: block; //para que el ancho y largo sean dinamicos respecto al resto
+    background-color: #00d4ff;
 }
-img{
-    max-width: 100%; //se adapta al 100% del contenedor en el que este
+h3 {
+    text-align: center;
+    background-color:#273b47;
+    margin: 0;
+    padding: 20px;
+    color: #fff;
+}
+img {
+    max-width: 100%;
+    height: 440px;
+    display: block;
+    margin: auto;
+    border-radius: 5px;
+}
+.product {
+    
+    margin-top: 0px;
+    text-align: center;
+    border-radius: 5px;
+    color: #fff;
+}
+button {
+    background-color:#273b47;
+    width: 100%;
+    height: 50px;
+    color: #fff;
+    size: 20em;
+}
+button:hover {
+    background-color:#fff;
+    transition: background-color 0.2s ease;
+    
 }
