--- a/src/app/components/product.component.html
+++ b/src/app/components/product.component.html
@@ -2,9 +2,10 @@
  <div class="product">
  
     <img [src]="product.image"alt="" />
-    <h2>{{ product.title }}</h2>
-    <strong>{{ product.price }}</strong>
-      
+    <div class="caca">
+        <h2>{{ product.title }}</h2>
+        <strong>{{ product.price }}</strong>
+    </div> 
 </div>
 
 
