--- a/src/app/components/product.component.html
+++ b/src/app/components/product.component.html
@@ -5,7 +5,7 @@
 
     <div class="caca">
 
-        <h2>{{ product.title | uppercase }}</h2> <!--este pipe transforma todo el texto a mayuscula-->
+        <h2 appHighlight>{{ product.title | uppercase }}</h2> <!--este pipe transforma todo el texto a mayuscula-->
 
         <p>{{ product.description | slice:0:20 }}</p><!--este pipe corta el texto a los 20 caracteres-->
 
