Inicio con modulos y rutas home, products y contact

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<router-outlet></router-outlet>
+
+
 <!-- para implementar la pipe que he creado -->
 Introduce el numero que quieres elevar al cuadrado: 
 <input type="text" [(ngModel)]="power"> 
