creando componentes de home: header, banner y footer

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,6 @@
-<p>home works!</p>
+<!-- creo en consola los componentes header, banner y footer y los llamo aqui -->
+<app-header></app-header>
+
+<app-banner></app-banner>
+
+<app-footer></app-footer>
