Creacion de la barra de navegación

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,8 @@
-<p>header works!</p>
+<!-- etiqueta nav para crear barra de navegacion -->
+<nav>
+    <!-- routerLink es mejor que href, porque asi es una single page, no se recarga tooooodo -->
+    <!-- routerLinkActive da un estilo diferente cuando estamos en esa url -->
+    <a routerLink="/home" routerLinkActive="active">Home</a>    
+    <a routerLink="/products" routerLinkActive="active">Productos</a>
+    <a routerLink="/contact" routerLinkActive="active">Contactos</a>
+</nav>
