--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <!-- vamos a recorrer un array de objetos, me va a sacar directamente todas las 
 propiedades del producto, el input entre [] y el outpu entre() , el metodo del output
 lo creamos en app.components.ts-->
