Detalles del producto y boton para ir a los detalles

--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -1,1 +1,11 @@
-<p>product-detail works!</p>
+<div>
+    <img [src]="producto.image" alt="">
+</div>
+
+<div>
+    <ul>
+        <li>Nombre: {{ producto.title }}</li>
+        <li>Precio: {{ producto.price | currency:"EUR":"symbol" }}</li>
+    </ul>
+    <p> {{ producto.description }}</p>
+</div>
