Modificacion para trabajar con vistas anidadas

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,3 @@
-<!-- creo en consola los componentes header, banner y footer y los llamo aqui -->
-<app-header></app-header>
-
+<!-- creo en consola los componentes header, banner y footer y los llamo aqui, con listas anidadas no los creo -->
 <app-banner></app-banner>
 
-<app-footer></app-footer>
