Probando guardianes, error en contact, revisar

--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,3 +1,4 @@
 <!-- creo en consola los componentes header, banner y footer y los llamo aqui, con listas anidadas no los creo -->
 <app-banner></app-banner>
 
+<h1>HOLAAAAAAAAAAAAAAAa</h1>
