Creado modulo page-not found

--- a/src/app/demo/components/demo/demo.component.html
+++ b/src/app/demo/components/demo/demo.component.html
@@ -2,8 +2,7 @@
 
 <!-- para implementar la pipe que he creado -->
 Introduce el numero que quieres elevar al cuadrado: 
-<input type="text" [(ngModel)]="power"> 
-{{ power | exponential }} <br><br>
+<input type="text" [(ngModel)]="power"> {{ power | exponential }} <br><br>
 
 
 
