Fin de la modularizacion e instalacion de angular material

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,3 +16,5 @@ body{
 //         grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));// nos hará breakpoints cada 300px
 //     }
 // }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
