Creo modulo material

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,9 @@
-//archivo de estilos global
+// //archivo de estilos global
 
-body{
-    margin: 0px;
-    padding: 0px;
-}
+// body{
+//     margin: 0px;
+//     padding: 0px;
+// }
 
 .product-grid{
     display: grid;
