--- a/src/app/product/components/product/product.component.scss
+++ b/src/app/product/components/product/product.component.scss
@@ -1,4 +1,4 @@
-//solo va a afectar a lo que este deltro de ese componente
+// //solo va a afectar a lo que este deltro de ese componente
 :host {
     display: block;
     margin: 5px ;
@@ -28,17 +28,17 @@ img {
     border-radius: 5px;
     color: #fff;
 }
-button {
-    background-color:#273b47;
-    width: 100%;
-    height: 50px;
-    color: #fff;
-    size: 20em;
-    border: none;
-}
-button:hover {
-    background-color:#fff;
-    transition: background-color 0.2s ease;
-    color: black;
+// button {
+//     background-color:#273b47;
+//     width: 100%;
+//     height: 50px;
+//     color: #fff;
+//     size: 20em;
+//     border: none;
+// }
+// button:hover {
+//     background-color:#fff;
+//     transition: background-color 0.2s ease;
+//     color: black;
     
-}
+// }
