Creando header, creada toolbar

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,8 +1,15 @@
+<mat-toolbar color="primary">
+    <mat-toolbar-row>
+        <nav>
+            <!-- routerLink es mejor que href, porque asi es una single page, no se recarga tooooodo -->
+            <!-- routerLinkActive da un estilo diferente cuando estamos en esa url -->
+            <a mat-button routerLink="/home" routerLinkActive="active">Home</a>    
+            <a mat-button routerLink="/products" routerLinkActive="active">Productos</a>
+            <a mat-button routerLink="/contact" routerLinkActive="active">Contactos</a>
+        </nav>
+        <mat-icon>shopping_cart</mat-icon>
+    </mat-toolbar-row>
+
+</mat-toolbar>
+
 <!-- etiqueta nav para crear barra de navegacion -->
-<nav>
-    <!-- routerLink es mejor que href, porque asi es una single page, no se recarga tooooodo -->
-    <!-- routerLinkActive da un estilo diferente cuando estamos en esa url -->
-    <a routerLink="/home" routerLinkActive="active">Home</a>    
-    <a routerLink="/products" routerLinkActive="active">Productos</a>
-    <a routerLink="/contact" routerLinkActive="active">Contactos</a>
-</nav>
