--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,2 +1,17 @@
-
-<p>footer works!</p>
+<mat-toolbar color="primary">
+    <mat-toolbar-row>
+        <div class="row between-xs middle-xs footer-row">
+            <nav>
+                <!-- routerLink es mejor que href, porque asi es una single page, no se recarga tooooodo -->
+                <!-- routerLinkActive da un estilo diferente cuando estamos en esa url -->
+                <a mat-button routerLink="" routerLinkActive="active">Home</a>    
+                <a mat-button routerLink="" routerLinkActive="active">Productos</a>
+                <a mat-button routerLink="" routerLinkActive="active">Contacto</a>
+            </nav>
+            <nav>
+                <a mat-button routerLink="" routerLinkActive="active">Facebook</a>
+                <a mat-button routerLink="" routerLinkActive="active">Instagram</a>
+            </nav>
+        </div>        
+    </mat-toolbar-row>
+</mat-toolbar>
