Agrandando contact para ver como quedaba el footer

--- a/src/app/contact/components/contact/contact.component.html
+++ b/src/app/contact/components/contact/contact.component.html
@@ -1,2 +1,41 @@
 
 <p>contact works!</p>
+<pre>
+a
+a
+a
+
+a
+a
+a
+a
+
+a
+a
+a
+a
+a
+a
+a
+a
+a
+a
+a
+a
+a
+a
+a
+a
+a
+a
+a
+a
+a
+a
+a
+a
+a
+a
+a
+a
+</pre>
