Elimino estilos y modifico html de product para hacerlo con material

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -9,8 +9,9 @@
                 <a mat-button routerLink="" routerLinkActive="active">Contacto</a>
             </nav>
             <nav>
-                <a mat-button routerLink="" routerLinkActive="active">Facebook</a>
-                <a mat-button routerLink="" routerLinkActive="active">Instagram</a>
+                
+                <a mat-button routerLink="" routerLinkActive="active"><mat-icon>facebook</mat-icon> Facebook</a>
+                <a mat-button routerLink="" routerLinkActive="active"><mat-icon>mail_outline</mat-icon> Correo</a>
             </nav>
         </div>        
     </mat-toolbar-row>
