Arreglado el error en @angular/core ya que habia una doble importacion

--- a/src/app/product/components/product/product.component.html
+++ b/src/app/product/components/product/product.component.html
@@ -1,13 +1,21 @@
+<mat-card>
 
-<!-- estoy llamanfo al selector de mi directiva dentro de la etiqueta -->
-<h2 appHighlight>{{ product.title | uppercase }}</h2> <!--este pipe transforma todo el texto a mayuscula-->
+    <mat-card-header>
+        <mat-card-title>
+            {{ product.title | uppercase }}
+        </mat-card-title>
+        <mat-card-subtitle>
+            {{ product.price | currency:"EUR":"symbol"}}
+        </mat-card-subtitle>
+    </mat-card-header>
 
-<img [src]="product.image"alt="" />
+    <mat-card-content>
+        <p>{{ product.description | slice:0:15 }}</p>
+    </mat-card-content>
 
-<p>{{ product.description | slice:0:20 }}</p><!--este pipe corta el texto a los 20 caracteres-->
+    <mat-card-actions>
+        <button routerLink="{{product.id}}" mat-raised-button color="primary">Ver detalles</button>
+        <button (click)="addCesta()" mat-raised-button color="primary">A&ntilde;adir a la cesta</button>
+    </mat-card-actions>
 
-<strong>{{ product.price | currency:"EUR":"symbol"}}</strong><!--este pipe te lo pone como un precio en euros-->
-
-<button (click)="addCesta()" mat-raised-button color="primary">A&ntilde;adir a la cesta</button>
-
-<button routerLink="{{product.id}}" mat-raised-button color="primary">Ver detalles</button>
+</mat-card>
