--- a/src/app/product/components/product/product.component.html
+++ b/src/app/product/components/product/product.component.html
@@ -9,6 +9,10 @@
         </mat-card-subtitle>
     </mat-card-header>
 
+    <div class="crop-image">
+    <img [src]="product.image" alt="">
+    </div>
+
     <mat-card-content>
         <p>{{ product.description | slice:0:15 }}</p>
     </mat-card-content>
