--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,8 @@
 
 .product-grid{
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));// nos hará breakpoints cada 300px
+    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));// nos hará breakpoints cada 500px
+    grid-gap: 50px 20px;
 }
 
 // @media (min-width: 576px){ //para poner en cada pantalla una generacion de los contenedores
