--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,18 +1,46 @@
-<mat-toolbar color="primary">
-    <mat-toolbar-row>
-        <div class="row between-xs middle-xs footer-row">
-            <nav>
-                <!-- routerLink es mejor que href, porque asi es una single page, no se recarga tooooodo -->
-                <!-- routerLinkActive da un estilo diferente cuando estamos en esa url -->
-                <a mat-button routerLink="" routerLinkActive="active">Home</a>    
-                <a mat-button routerLink="" routerLinkActive="active">Productos</a>
-                <a mat-button routerLink="" routerLinkActive="active">Contacto</a>
-            </nav>
-            <nav>
-                
-                <a mat-button routerLink="" routerLinkActive="active"><mat-icon>facebook</mat-icon> Facebook</a>
-                <a mat-button routerLink="" routerLinkActive="active"><mat-icon>mail_outline</mat-icon> Correo</a>
-            </nav>
-        </div>        
-    </mat-toolbar-row>
-</mat-toolbar>
+<footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-md-4">
+          <div class="box">
+            <h3>Productos</h3>
+            <ul>
+              <li>
+                <a routerLink="/products" [queryParams]="{ type: 'news' }"
+                  >Nuevos Productos</a
+                >
+              </li>
+              <li>
+                <a routerLink="/products" [queryParams]="{ type: 'offer' }"
+                  >En oferta</a
+                >
+              </li>
+              <li>
+                <a routerLink="/products" [queryParams]="{ type: 'latest' }"
+                  >Últimos productos</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-4">
+          <div class="box">
+            <h3>Acerca de PlatziStore</h3>
+            <ul>
+              <li><a routerLink="/about-us">Sobre nosotros</a></li>
+              <li><a routerLink="/stores">Nuestras tiendas</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-4">
+          <div class="box">
+            <h3>Contacto</h3>
+            <!-- <mat-form-field color="accent" class="full-width">
+                  <input [formControl]="emailInput" matInput placeholder="Su correo" type="email">
+                </mat-form-field>
+                <button (click)="registerMail()" [disabled]="emailInput.invalid" mat-raised-button color="accent">Suscribirse</button> -->
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
