Mas cambios en el estilo de footer, añado facebook y mail

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -34,12 +34,13 @@
         </div>
         <div class="col-xs-12 col-md-4">
           <div class="box">
+            
             <h3>Contacto</h3>
-            <!-- <mat-form-field color="accent" class="full-width">
-                  <input [formControl]="emailInput" matInput placeholder="Su correo" type="email">
-                </mat-form-field>
-                <button (click)="registerMail()" [disabled]="emailInput.invalid" mat-raised-button color="accent">Suscribirse</button> -->
-          </div>
+            <ul>
+            <li><a mat-button routerLink="" routerLinkActive="active"><mat-icon>facebook</mat-icon> Facebook</a></li>
+            <li><a mat-button routerLink="" routerLinkActive="active"><mat-icon>mail_outline</mat-icon> Correo</a></li>
+            </ul>
+        </div>
         </div>
       </div>
     </div>
