--- a/src/app/product/components/product-detail/product-detail.component.html
+++ b/src/app/product/components/product-detail/product-detail.component.html
@@ -1,11 +1,14 @@
-<div>
-    <img [src]="producto.image" alt="">
+<div *ngIf="producto" >
+    <div class="crop-image">
+        <img [src]="producto.image" alt="">
+    </div>
+    
+    <div>
+        <ul>
+            <li>Nombre: {{ producto.title }}</li>
+            <li>Precio: {{ producto.price | currency:"EUR":"symbol" }}</li>
+        </ul>
+        <p> {{ producto.description }}</p>
+    </div>
 </div>
 
-<div>
-    <ul>
-        <li>Nombre: {{ producto.title }}</li>
-        <li>Precio: {{ producto.price | currency:"EUR":"symbol" }}</li>
-    </ul>
-    <p> {{ producto.description }}</p>
-</div>
