Creo metodos y boton para añadir producto a la api

--- a/src/app/product/components/product-detail/product-detail.component.html
+++ b/src/app/product/components/product-detail/product-detail.component.html
@@ -10,5 +10,6 @@
         </ul>
         <p> {{ producto.description }}</p>
     </div>
+    <button (click)="createProduct()">Crear</button>
 </div>
 
