Creo metodos y boton para update el producto

--- a/src/app/product/components/product-detail/product-detail.component.html
+++ b/src/app/product/components/product-detail/product-detail.component.html
@@ -11,5 +11,6 @@
         <p> {{ producto.description }}</p>
     </div>
     <button (click)="createProduct()">Crear</button>
+    <button (click)="updateProduct()">Actualizar</button>
 </div>
 
