Creo metodos y boton para borrar el producto

--- a/src/app/product/components/product-detail/product-detail.component.html
+++ b/src/app/product/components/product-detail/product-detail.component.html
@@ -10,7 +10,8 @@
         </ul>
         <p> {{ producto.description }}</p>
     </div>
-    <button (click)="createProduct()">Crear</button>
-    <button (click)="updateProduct()">Actualizar</button>
+    <button (click)="createProduct()">Crear producto</button>&nbsp;
+    <button (click)="updateProduct()">Actualizar producto</button>&nbsp;
+    <button (click)="deleteProduct()">Borrar producto</button>
 </div>
 
